fixed iframe spacing

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,9 @@
     background-size:cover;
 }
 
+#disclaimer{
+		font-size: .5em;
+	}
 /**********************containers**********************/
 
 .nav {
@@ -146,14 +149,15 @@ nav {
 	}
 	
     h1 {
-      font-size: 3em;
+      font-size: 3.6em;
    }
     h2 {
-      font-size: 2em;
+      font-size: 2.5em;
     }
 	h3 {
 	  font-size: 1.4em;
 	}
+
     #searchHeader {
         font-size: .9em;
     }
@@ -170,9 +174,7 @@ nav {
 	  white-space: nowrap;
     }
 
-	#disclaimer{
-		font-size: .5em;
-	}
+
 
 	#sugarLinks{
 		font-family: 'Bree Serif', serif;
@@ -189,26 +191,30 @@ nav {
 		font-size: 70%;
 	}
 	
-	.fluidMedia {
-    position: relative;
-    padding-bottom: 34.25%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
-    padding-top: 30px;
-    height: 100%;
-	width: 100%;
-    overflow: hidden;
+    .fluidMedia {
+        position: relative;
+        padding-bottom: 35%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
+        padding-top: 21%;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
 	}
 	
 	.fluidMedia iframe {
-    position: absolute;
-    top: 0; 
-    left: 0;
-    width:100%;
-    height: 100%;
-	padding-bottom: 14px;
+        position: absolute;
+        top: 0; 
+        left: 0;
+        width:100%;
+        height: 100%;
 	}
+    
 	#youtubeWell{
 		margin-left: 10%;
 	}
+    
+    #youtubeWell li a{
+        font-size: 1.3em
+    }
     #resultsTable {
         opacity: .95;
         font-size: 1.3em;
@@ -219,9 +225,11 @@ nav {
 
 /*********************************IPAD***************************************/
 
+
+
 @media only screen and (min-width: 626px) and (max-width: 769px){
 	#youtubeWell{
-		padding-left: 16%;
+		padding-left: 12%;
 	}
     
 	.dropdown-menu li a{
@@ -229,12 +237,11 @@ nav {
 	}
     
     #newContainer{
-        padding-left: 24%;
-        padding-right: 10%
+        padding-left: 17%;
     }
     
 	form.navbar-form {
-        padding-left: 10%;
+        padding-left: 17%;
         max-width: 75%;
 	}
     
@@ -252,11 +259,21 @@ nav {
         float: left;
         text-decoration: none;
     }
-	
-	.fluidMedia {
+    
+    #resultsTable {
+        opacity: .95;
+        font-size: 1.3em;
+        text-align: center;
+        font-family: 'Bree Serif', serif;
+}
+    #navTabs1{
+        font-size: 1.3em;
+    }
+    
+    .fluidMedia {
         position: relative;
-        padding-bottom: 34.25%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
-        padding-top: 30px;
+        padding-bottom: 34%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
+        padding-top: 85px;
         height: 100%;
         width: 100%;
         overflow: hidden;
@@ -269,13 +286,9 @@ nav {
         width:100%;
         height: 100%;
 	}
-    
-    #resultsTable {
-        opacity: .95;
-        font-size: 1.3em;
-        text-align: center;
-        font-family: 'Bree Serif', serif;
-}
+    #youtubeWell li a{
+        font-size: 1.3em
+    }
 }
 /*****************************Medium***************************************/
 
@@ -289,7 +302,7 @@ nav {
     }
 
 	form.navbar-form {
-        padding-left: 7%;
+        padding-left: 14%;
 		padding-right:10%;
 	}
 	
@@ -300,14 +313,38 @@ nav {
         text-decoration: none;	
 	}
 	#youtubeWell{
-		padding-left: 19%;
+		padding-left: 17%;
 	}
     #newContainer {
-        padding-left:23%;
+        padding-left:18%;
     }
     #resultsTable {
         font-size: 1.3em;
         text-align: center;
+    }
+    
+    #navTabs1{
+        font-size: 1.3em;
+    }
+    
+    .fluidMedia {
+        position: relative;
+        padding-bottom: 34%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
+        padding-top: 54px;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+	}
+	
+	.fluidMedia iframe {
+        position: absolute;
+        top: 0; 
+        left: 0;
+        width:100%;
+        height: 100%;
+	}
+    #youtubeWell li a{
+        font-size: 1.3em
     }
 }
 /*****************************LARGE***************************************/
@@ -322,7 +359,7 @@ nav {
     }
 
 	form.navbar-form {
-        padding-left: 7%;
+        padding-left: 17%;
 		padding-right:18%;
 	}
 	
@@ -334,18 +371,43 @@ nav {
 	}
     
 	#youtubeWell{
-		padding-left:26%;
-    
+		padding-left:18%;
 	}
     
+    #youtubeWell li a{
+        font-size: 1.3em
+    }
+    
     #newContainer {
-        padding-left:29%;
+        padding-left:20%;
     }
     
     #resultsTable {
         font-size: 1.3em;
         text-align: center;
     }
+    
+    #navTabs1{
+        font-size: 1.7em;
+    }
+    .fluidMedia {
+        position: relative;
+        padding-bottom: 34%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
+        padding-top: 54px;
+        height: 280px;
+        width: 500px;
+        overflow: hidden;
+	}
+	
+	.fluidMedia iframe {
+        position: absolute;
+        top: 0; 
+        left: 0;
+        width:100%;
+        height: 100%;
+	}
+    
+    
 }
 
 /*****************************FullScreen***************************************/
@@ -358,7 +420,7 @@ nav {
     }
 
 	form.navbar-form {
-        padding-left: 6%;
+        padding-left: 18%;
 		padding-right:18%;
 	}
 	
@@ -370,11 +432,11 @@ nav {
 	}
     
 	#youtubeWell{
-		padding-left: 30%;
+		padding-left: 15%;
 	}
     
     #newContainer {
-        padding-left:33%;
+        padding-left:23%;
     }
     
     #resultsTable {
@@ -382,7 +444,28 @@ nav {
         text-align: center;
     }
     
-
+    #navTabs1{
+        font-size: 2em;
+    }
+    .fluidMedia {
+        position: relative;
+        padding-bottom: 34%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
+        padding-top: 54px;
+        height: 400px;
+        width: 700px;
+        overflow: hidden;
+	}
+	
+	.fluidMedia iframe {
+        position: absolute;
+        top: 0; 
+        left: 0;
+        width:100%;
+        height: 100%;
+	}
+    #youtubeWell li a{
+        font-size: 1.5em
+    }
 }
 
 
